[project]
name = "cchmcli"
version = "0.1.0"
description = "A minimal CLI tool for screencasting using aiortc WebRTC"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiortc>=1.14.0",
    "opencv-python>=4.8.0",
    "mss>=9.0.0",
    "aiohttp>=3.8.0",
    "click>=8.1.0",
    "numpy>=1.24.0",
]
